--- a/src/components/Layout/DefaultLayout/DefaultLayout.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.scss
@@ -8,6 +8,8 @@
 .container {
     width: var(--default-layout-header-width);
     display: flex;
+    margin-top: 60px;
+    max-width: 100%;
 }
 
 .content {
