--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,5 +1,6 @@
 .button-login {
     font-size: 1.6rem;
+    font-family: 'ProximaNova', sans-serif;
     font-weight: 700;
     min-width: 100px;
     padding: 9px 16px;
