--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;0,700;1,500;1,700&display=swap');
+
 @import 'normalize.css';
 :root {
     //color layout
@@ -21,8 +21,37 @@ html {
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'ProximaNova', sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+}
+
+
+// fonts emmbeded
+
+@font-face {
+    font-family:ProximaNova;
+    src: url('/assets/fonts/Proxima-Nova-Regular.woff2');
+    font-weight: 400;
+}
+@font-face {
+    font-family:ProximaNova;
+    src: url('/assets/fonts//ProximaNova-Semibold.woff2');
+    font-weight: 600;
+}
+@font-face {
+    font-family:ProximaNova;
+    src: url('/assets/fonts/Proxima-Nova-Bold.woff2');
+    font-weight: 700;
+}
+@font-face {
+    font-family:SofiaPro;
+    src: url('/assets/fonts/sofiapro-semibold.otf');
+    font-weight: 600;
+}
+@font-face {
+    font-family:SofiaPro;
+    src: url('/assets/fonts/sofiapro-bold.woff2');
+    font-weight: 700;
 }
